unpackaged/main/default/objects/Application_Question__c/Application_Question__c.object-meta.xml
<CustomObject>
    <label>Application Question</label>
    <nameField>
        <displayFormat>Q-{00000}</displayFormat>
        <label>Application Question Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Application Questions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>