unpackaged/main/default/objects/Application_Question__c/fields/Application_Question_Set__c.field-meta.xml
<CustomField>
    <fullName>Application_Question_Set__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Application Question Set</label>
    <referenceTo>Application_Question_Set__c</referenceTo>
    <relationshipLabel>Application Questions</relationshipLabel>
    <relationshipName>Application_Questions</relationshipName>
    <type>Lookup</type>
</CustomField>