unpackaged/main/default/objects/Application_Question__c/recordTypes/Single_Barrel.recordType-meta.xml
<RecordType>
    <fullName>Single_Barrel</fullName>
    <active>true</active>
    <label>Single Barrel</label>
</RecordType>